--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "imblearn>=0.0",
     "mlflow>=3.9.0",
     "scikit-learn>=1.8.0",
     "xgboost>=3.1.3",
